FreeST/test/Programs/ValidTests/parensOrder/parensOrder.fst
id : forall a => a -> a
id x = x

f : (Char -> Char) -> Char
f g = g 'a'

main : Char
main = f id[Char]